--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,13 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <activiti.version>5.17.0</activiti.version>
+        <!--
+            Depending on the current snapshot build of Activiti,
+             which depends on the latest and greatest Spring Boot.
+             The current stable build (Activiti 5.17.0), depends on Spring Boot 1.1.6.
+        -->
+        <activiti.version>5.17.1-SNAPSHOT</activiti.version>
+        <spring.boot.version>1.2.2.RELEASE</spring.boot.version>
     </properties>
 
     <dependencies>
@@ -46,7 +52,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>1.1.6.RELEASE</version>
+            <version>${spring.boot.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -57,5 +63,18 @@
         </dependency>
 
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>snapshots-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
