--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '11', '16' ]
+        java: [ '11' ]
     name: Build on Java ${{ matrix.Java }}
     steps:
       - uses: actions/checkout@v2
